<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ap.atm.ui.activities.AddPortraitSignalActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/TextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ubicación" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mSemaphoreInpLatitude"
                    style="@style/LabelInputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        style="@style/InputTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="Latitud"
                        android:text=" " />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mSemaphoreInpLongitude"
                    style="@style/LabelInputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        style="@style/InputTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="Longitud"
                        android:text=" " />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mSemaphoreInpGoogleAddress"
                style="@style/LabelInputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    style="@style/InputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="Direccion Google"
                    android:text=" " />
            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/TextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dirección" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mSemaphoreInpStreet1"
                    style="@style/LabelInputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        style="@style/InputTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street_1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mSemaphoreInpStreet2"
                    style="@style/LabelInputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        style="@style/InputTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street_2" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mSemaphoreInpBarrio"
                    style="@style/LabelInputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        style="@style/InputTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/barrio" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mSemaphoreInpParroquia"
                    style="@style/LabelInputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        style="@style/InputTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/parroquia" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Spinner
                android:id="@+id/mSemaphoreSpnInterseccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Caracteristicas" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/mSemaphoreSpnMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/mSemaphoreSpnGrupo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/mSemaphoreSpnRegulador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/mSemaphoreSpnFuente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/mSemaphoreSpnUps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/mSemaphoreSpnArmario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/mSemaphoreAddElement"
                style="@style/TextLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_plus_file"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="Elemento" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mSemaphoreRecyclerElements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView9"
                style="@style/TextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Comentarios" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mSemaphoreInpInventario"
                style="@style/LabelInputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    style="@style/InputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inventory" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mSemaphoreInpComentario"
                style="@style/LabelInputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    style="@style/InputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mSemaphoreInpEquipment"
                style="@style/LabelInputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    style="@style/InputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/equipment" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView10"
                style="@style/TextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Imágenes Agregadas" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mSemaphoreRecyclerImages"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/mSemaphoreBtnSave"
                style="@style/TextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/save"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
